[package]
name = "blobfish"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
serde_bencode = "0.2.4"
serde = "1"
serde_derive = "1"
md-5 = "0.10.6"
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde_bytes = "0.11.15"
positioned-io = "0.3.3"
